// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputData functional tests displays default value if replaceValue is false 1`] = `
<input
  class="css-1obixtf-Input egik0ru0"
  data-cell="input"
  data-location="B-2"
  value="test entered"
/>
`;

exports[`InputData functional tests will not display default value if replaceValue is true 1`] = `
<input
  class="css-1obixtf-Input egik0ru0"
  data-cell="input"
  data-location="B-2"
  value=""
/>
`;
